Fix input misalignments on mobile

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -168,6 +168,8 @@ input[type='submit'] {
   border: none;
   border-bottom: 1px solid colors.$mauve;
 
+  text-align: center;
+
   transition: color 300ms ease-in-out, background 150ms ease-in-out,
     border-bottom 150ms ease-in-out, opacity 200ms ease-in-out;
   transform: translateX(-50%);
